--- a/README
+++ b/README
@@ -7,7 +7,17 @@ Primate Life Histories is an online database project with database and web inter
 Installation:
 1. check out source code to a desired location
 2. Install required jar files (see Technology)
-3. Create a postgresql database by running the sql scripts under the src/db.sql folder
+3. Create a postgresql database by running the sql scripts under the src/db.sql folder by folliwng order
+   1) create tables, including:
+      * plhdb.ddl.sql: create major tables to hold scientific data
+      * plhdb.audit.sql: create table to store audit information 
+      * plhdb.auth.sql: create auth schema with tables to store user and authentication and authorization information
+      * plhdb.bulkimp.sql: tables for bulk data import
+   2) create views: plhdb.views.sql
+   3) create functions:plhdb.funcs.sql
+   4) create rules: plhdb.rules.sql
+   5) initialize data: import cvterm data in the file src/db/data/event_types.txt with term relationship defined in src/db/data/cvterms.ttl
+   
 4. Create a user with access to the database
 5. Compile java classes and generate web application war file
 	The web-application is built using Apache Ant. You must have ant installed in
